# python-project-50

./: .coverage  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  python-ci.yml
gendiff/: cli.py  diff.py  difference.py  file_reader.py  generate_diff.py  json_parser.py  parser.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_formatters.py  test_gendiff.py  test_generate_diff.py
tests/fixtures/: result_plain.txt
