[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DenisDolgov1991 <dolgovdenis1991@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.8.10"
PyYAML = "^6.0"
pytest = "^7.2.0"
pytest-cov = "4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
